# Danbi_assignment

./: .env  README.md  db.sqlite3  pyproject.toml
Common/: models.py
Task/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
Task/migrations/: 0001_initial.py  0002_alter_subtask_completed_date_and_more.py  0003_alter_subtask_team_alter_task_team.py  0004_alter_subtask_completed_date_and_more.py
Team/: admin.py  models.py  serializers.py
Team/migrations/: 0001_initial.py  0002_alter_team_name.py  0003_alter_team_name.py  0004_alter_team_name.py  0005_alter_team_name.py
User/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
User/migrations/: 0001_initial.py  0002_user_team_alter_user_last_name.py  0003_remove_user_team.py  0004_user_team.py  0005_alter_user_team.py
config/: settings.py  urls.py
